# pyxDamerauLevenshtein

./: .gitignore  .travis.yml  AUTHORS.md  CHANGES.md  LICENSE  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build_and_release.yml
examples/: examples.py
pyxdameraulevenshtein/: __init__.py  _initialize.c  pyxdameraulevenshtein.c  pyxdameraulevenshtein.pyx
tests/: test_pyxdl.py
type-stubs/: LICENSE  README.md  setup.cfg  setup.py
type-stubs/src/pyxdameraulevenshtein-stubs/: __init__.pyi
