[metadata]
name = pyxDamerauLevenshtein-stubs
version = 1.7.0
author = Geoffrey Fairchild
author_email = mail@gfairchild.com
maintainer = Geoffrey Fairchild
maintainer_email = mail@gfairchild.com
url = https://github.com/gfairchild/pyxDamerauLevenshtein-stubs
license = BSD 3-Clause License
license_files = file: ../LICENSE.txt
description = pyxDamerauLevenshtein implements the Damerau-Levenshtein (DL) edit distance algorithm for Python in Cython for high performance.
long_desription = file: ../README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Text Processing :: Linguistic

[options]
include_package_data = True
packages = pyxdameraulevenshtein-stubs
package_dir =
    = src/

[options.package_data]
 * = *.pyi
